# croppy

./: README.md  pyproject.toml
croppy/: croppy.py
